[package]
name = "maze"
version = "0.1.0"
authors = ["Neil <h66r10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17"
java_random = "0.1.3"
crc = "1.8.1"

[[bin]]
name="unhasher"
path= "src/unhasher.rs"

[[bin]]
name="hasher"
path="src/hasher.rs"

[[bin]]
name="view_maze"
path="src/generate_map.rs"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3